[gd_scene load_steps=5 format=3 uid="uid://dn7yxnlcjoy1x"]

[ext_resource type="Script" path="res://Scripts/turret.gd" id="1_58cem"]
[ext_resource type="Texture2D" uid="uid://bo1eu6dmb008k" path="res://Assets/KenneyAssets/Tilesheet/colored-transparent.png" id="1_77ix5"]
[ext_resource type="PackedScene" uid="uid://l4b0bi7kugjd" path="res://Entities/laser.tscn" id="3_5qqn1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r01gi"]
radius = 95.021

[node name="Turret" type="Node2D"]
rotation = 0.000664009
script = ExtResource("1_58cem")
turret_damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 4.71239
texture = ExtResource("1_77ix5")
region_enabled = true
region_rect = Rect2(799, 17, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r01gi")

[node name="Attack_CoolDown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="Laser" parent="." instance=ExtResource("3_5qqn1")]
position = Vector2(7, 9.53674e-07)
rotation = -1.49206

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Attack_CoolDown" to="." method="_on_attack_cool_down_timeout"]
